@@ -1,7 +1,8 @@
 
 2009-??-??   0.3.6:
 -------------------
-
+Updated development status
+Added sieve prime number example
 
 
 2009-04-06   0.3.5:
